# annotator_RUST

./: AppIcon.icns  COLOR_SCHEME.md  Cargo.toml  ICON_REFERENCE.md  KEYBINDINGS.txt  MATERIAL3_COLORS.md  PHASE_4_PLAN.md  QUICK_TEST_GUIDE.md  README.md  REDESIGN_PLAN.md  TESTS_README.md  TEST_DOCUMENTATION.md  VISUAL_TEST_REFERENCE.md  build.rs  classes.yaml  coco_hierarchy.yaml.backup  dataset_fake.json  dataset_fake_no_labels.json  readme2.md  readme3.md  run_tests.sh  simple_classes.yaml
src/: auto_resize.rs  classes.rs  config.rs  hierarchy.rs  main.rs  utils.rs
src/callbacks/: annotation.rs  auto_resize.rs  drawing.rs  file_ops.rs  mod.rs  navigation.rs  polygon.rs  resize.rs  selection.rs
src/export/: coco.rs  mod.rs  voc.rs
src/state/: dataset.rs  mod.rs  types.rs
tests/: p3_010_select_bbox.rs  p3_011_select_point.rs  p3_012_deselect_canvas.rs  p3_013_overlapping_selection.rs  p3_020_initial_alignment.rs  p3_021_pan_alignment.rs  p3_022_zoom_alignment.rs  p3_030_add_annotation.rs  p3_031_remove_annotation.rs  p3_040_performance_many.rs  test_helpers.rs
ui/: app_theme.slint  appwindow.slint  theme.slint
ui/components/: bottom_bar.slint  menubar.slint  side_panel.slint  sidebar.slint  top_bar.slint
ui/components/dialogs/: appearance_dialog.slint  keybindings_dialog.slint  layout_dialog.slint  settings_dialog.slint
ui/material/ui/icons/: icons.slint
ui/material/ui/styling/: material_palette.slint
