[package]
name = "annotator"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
directories = "5.0"
shellexpand = "3.0"
rfd = "0.14"
chrono = "0.4"
image = "0.25"
imageproc = "0.25"

[build-dependencies]
slint-build = "1.8"
